fix wrap color

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -7,7 +7,7 @@
   background: #2A2F37;
 }
 
-.wy-nav-content {
+.wy-nav-content, .wy-nav-content-wrap{
     background: #F0EDEE;
 }
 
